--- a/es/index.html
+++ b/es/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en">
+  <html lang="es">
       <head>
           <meta charset="utf-8">
           <title>Rodare</title>
@@ -11,8 +11,8 @@
             <div class="wrapper">
   <div class="translate">
                   <!-- GTranslate: https://gtranslate.io/ -->
-                  <a href="../index.html" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                  <a href="#" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
+                  <a href="../index.html" onclick="doGTranslate('es|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
+                  <a href="#" onclick="doGTranslate('es|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
                   <a href="../pl/index.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
 
                   <style type="text/css">
@@ -35,26 +35,28 @@
                 </h2>
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
                 <ul class="elmenu">
-                    <li class="elmenu"><a href="index.html">Home</a></li>
+                    <li class="elmenu"><a href="index.html">Inicio</a></li>
                     <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
                     <li class="dropdown elmenu">
-                      <a href="courses.html" class="dropbtn elmenu">Courses</a>
+                      <a href="courses.html" class="dropbtn elmenu">Cursos</a>
                       <div class="dropdown-content elmenu">
-                        <a href="spanish.html" class="elmenu">Spanish</a>
-                        <a href="japanese.html" class="elmenu">Japanese</a>
-                        <a href="english.html" class="elmenu">English</a>
+                        <a href="spanish.html" class="elmenu">Español</a>
+                        <a href="japanese.html" class="elmenu">Japonés</a>
+                        <a href="english.html" class="elmenu">Inglés</a>
                         <a href="piano.html" class="elmenu">Piano</a>
                       </div>
                     </li>
-                    <li class="elmenu"><a href="calendar.html">Calendar</a></li>
-                    <li class="elmenu"><a href="signup.html">Sign-up</a></li>
+                    <li class="elmenu"><a href="calendar.html">Calendario</a></li>
+                    <li class="elmenu"><a href="signup.html">Inscripción</a></li>
                 </ul>
                 <article class="img-info">
-                    <h2>About</h2>
-                    <p>Welcome to Rodrigo Arenas Catalán's courses site.
-This site was created to make it easier for students to approach the courses I teach. Each course has levels with exercises and tests which will be set as homework by the teacher along the class. Apart from these, each course has a book with audios that will be sent to each student before the beginning of the lessons. It also has a blog where you can access articles, notices and relevant information about the courses. To sign-up for a course, simply go to "Sign-up" and choose the course that best suits you.
-Cheers,
-Rodrigo Arenas Catalán.</p>
+                    <h2>Acerca del sitio</h2>
+                    <p>
+Bienvenido al sitio de cursos de Rodrigo Arenas Catalán.
+Este sitio fue creado para facilitar a los estudiantes el acercamiento a los cursos que imparto. Cada curso tiene niveles con ejercicios y pruebas que serán puestos como tarea por el profesor a lo largo de la clase. Aparte de estos, cada curso tiene un libro con audios que se enviará a cada alumno antes del comienzo de las lecciones. También cuenta con un blog donde se puede acceder a artículos, avisos e información relevante sobre los cursos. Para inscribirte en un curso, simplemente ve a "Inscríbete" y elige el curso que más te convenga.
+salud,
+Rodrigo Arenas Catalán.
+</p>
 
                 </article>
                 <img class="img-me" src="images/ogrod.jpeg" alt="ogród">
