--- a/es/a1-iniciacion.html
+++ b/es/a1-iniciacion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en">
+  <html lang="es">
       <head>
           <meta charset="utf-8">
           <title>Rodare</title>
@@ -12,8 +12,8 @@
             <div class="wrapper">
   <div class="translate">
                   <!-- GTranslate: https://gtranslate.io/ -->
-                  <a href="../a1-iniciacion.html" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                  <a href="#" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
+                  <a href="../a1-iniciacion.html" onclick="doGTranslate('es|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
+                  <a href="#" onclick="doGTranslate('es|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
                   <a href="../pl/a1-iniciacion.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
 
                   <style type="text/css">
@@ -36,14 +36,14 @@
                 </h2>
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
                 <ul class="elmenu">
-                    <li class="elmenu"><a href="index.html">Home</a></li>
+                    <li class="elmenu"><a href="index.html">Inicio</a></li>
                     <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
                     <li class="dropdown elmenu">
-                      <a href="courses.html" class="dropbtn elmenu">Courses</a>
+                      <a href="courses.html" class="dropbtn elmenu">Cursos</a>
                       <div class="dropdown-content elmenu">
-                        <a href="spanish.html" class="elmenu">Spanish</a>
-                        <a href="japanese.html" class="elmenu">Japanese</a>
-                        <a href="english.html" class="elmenu">English</a>
+                        <a href="spanish.html" class="elmenu">Español</a>
+                        <a href="japanese.html" class="elmenu">Japonés</a>
+                        <a href="english.html" class="elmenu">Inglés</a>
                         <a href="piano.html" class="elmenu">Piano</a>
                       </div>
                     </li>
@@ -52,7 +52,7 @@
                 </ul>
           <article class="img-info">
           <div id="main-content">
-            <p><h1>Sign-up for a course</h1></p>
+            <p><h1>Inscribirse en un curso</h1></p>
             <div class="course-selection" style="display: inline;">
             <select id="input" onchange="courseLevel()">
                       <option>Spanish</option>
@@ -77,38 +77,43 @@
                 </select>
                   </div>
               <p><h1>Español A1(iniciación) Online</h1></p>
-              <p>This is the most basic level of mastery of a language. At this level the speaker is expected to be able to interact easily with others who make an effort to speak slowly and clearly, not in a natural conversational rhythm. The person is expected to be able to carry out basic conversations such as introducing himself, asking and answering questions about personal data (name, where he lives, hobbies). The vocabulary is basic, and is limited to concrete nouns and close to the day (domestic animals, parts of the house, food, parts of the body).The course is divided in three modules each consisting of various units covering the A1 contents and allowing you by the end of the course, to be able to express basic ideas and start your journey in the language.
-                <button onclick="toggleContent60()" style="background-color:blue;color:white;">Read More</button>
+              <p>
+                Se trata del nivel más básico de dominio de una lengua. En este nivel se espera que el hablante pueda interactuar de manera sencilla con otras personas que hagan un esfuerzo por hablar lenta y claramente, no en un ritmo de conversación natural.
+
+          Se espera de la persona que pueda llevar a cabo conversaciones básicas como presentarse a sí mismo, hacer y responder preguntas sobre datos personales (nombre, donde vive, aficiones).
+
+          El vocabulario es básico, y se limita a sustantivos concretos y cercanos al día día (animales domésticos, partes de la casa, comida, partes del cuerpo). El curso se divide en tres módulos, cada uno de los cuales consta de varias unidades que cubren los contenidos de A1 y le permiten, al final del curso, poder expresar ideas básicas y comenzar su viaje en el idioma.
+                <button onclick="toggleContent60()" style="background-color:blue;color:white;">Leer más</button>
                 <div id="content60" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
                   <p>
-                  The methodology of the course is based on fun activities carefully chosen by the teacher around the class topic covering all the areas of the language acquisition, namely: listening, speaking, reading and writing. Every class starts with a short conversation, a quick check of the previous homework, and a short presentation of the class topic/unit through an explanation by me complemented by drawings using a tablet, and sometimes audiovisual examples too. Soon after, the students are assigned group or individual activities to perform during class. Then we briefly check the results and clarify student’s questions, and repeat the activity-check methodology till the end of the class, when homework is assigned. The homework consists of 2 components: a quizlet vocabulary that is check by riddles in the following class and an open homework that could be either exercises from the book or a composition following a reading or an audiovisual material.
+La metodología del curso se basa en actividades divertidas cuidadosamente seleccionadas por el profesor en torno al tema de la clase que cubre todas las áreas de la adquisición del idioma, a saber: escuchar, hablar, leer y escribir. Cada clase comienza con una breve conversación, una revisión rápida de la tarea anterior y una breve presentación del tema/unidad de clase a través de una explicación mía complementada con dibujos usando una tableta y, a veces, también con ejemplos audiovisuales. Poco después, a los estudiantes se les asignan actividades grupales o individuales para realizar durante la clase. Luego revisamos brevemente los resultados y aclaramos las dudas de los estudiantes, y repetimos la metodología de verificación de actividad hasta el final de la clase, cuando se asigna la tarea. La tarea consta de 2 componentes: un quizlet de vocabulario que se comprueba mediante acertijos en la siguiente clase y una tarea abierta que puede ser ejercicios del libro o una composición después de una lectura o un material audiovisual.
                   <p>
-                  Apart from the class textbook -which will be sent to the student some days before the class-, we use Google Classroom, Google Docs, Quizlet and, of course, this website (with exercises and tests) as the main platforms of work, but also other ones such as Flippity and LearningApps. The class is taught via zoom and the recurring link is sent some days before the first lesson.
+Aparte del libro de texto de clase -que se le enviará al alumno unos días antes de la clase-, utilizamos Google Classroom, Google Docs, Quizlet y, por supuesto, esta web (con ejercicios y tests) como principales plataformas de trabajo, pero también otras como Flippity y LearningApps. La clase se imparte vía zoom y el enlace recurrente se envía unos días antes de la primera lección.
                   </p>
-                  Length of the course: 45 academic hrs / 1.5 hrs each time / Twice a week
+Duración del curso: 45 hrs académicas / 1.5 hrs cada vez / Dos veces por semana
                   <br>
-                  Price: 80zl/1hr. (up to 4 people), 60zl/1hr (up to 8 people). Individual lessons: 120zl/1hr.
-                  <br>Platform: Zoom (link will be sent before the first lesson)
-                  Schedule: 3 options (the first one to reach 2 people will be the definite one):
-                  <ul>
-                    <li>Option 1) Mondays and Wednesdays 20:00-21:30</li>
-                    <li>Option 2) Wednesdays 10:45-12:15 and Fridays 10:00-11:30</li>
-                    <li>Option 3) Wednesdays 12:15-13:45 and Fridays 11:30-13:00</li>
+Precio: 80 PLN/1 hora. (hasta 4 personas), 60 PLN/1h (hasta 8 personas). Clases individuales: 120 PLN/1 hora.
+                  <br>
+                  Plataforma: Zoom (el enlace se enviará antes de la primera lección)
+                                     Horario: 3 opciones (la primera en llegar a 2 personas será la definitiva):                  <ul>
+                    <li>Opción 1) Lunes y Miércoles 20:00-21:30</li>
+                    <li>Opción 2) Miércoles 10:45-12:15 y Viernes 10:00-11:30</li>
+                    <li>Opción 3) Miércoles 12:15-13:45 y Viernes 11:30-13:00</li>
                   </ul>
                   </p>
 <div class="responsive">
           <table>
             <tr>
-              <th>Class days</th>
-              <th>Start and End date</th>
-              <th>Course price</th>
-              <th>Reservation</th>
+              <th>Días de clase</th>
+              <th>Fecha de inicio y finalización</th>
+              <th>Precio del curso</th>
+              <th>Reserva</th>
             </tr>
             <tr>
-              <td>Three options 👆 (Select on the form that will be displayed after clicking "ORDER"👉)</td>
+              <td>Tres opciones 👆 (Selecciona en el formulario que se desplegará luego de hacer clic en "PEDIR"👉)</td>
               <td>02.01.2022 - 14.04.2023</td>
-              <td><ul id="price"><li>4800zł (2 to 4 people), or</li><li>3600zł (5 to 8 people)</li> <li>120zł (1:1)</li></ul></td>
+              <td><ul id="price"><li>4800 PLN (2 a 4 personas), o</li><li>4800 PLN (2 a 4 personas), o</li> <li>120 zlotys (1:1)</li></ul></td>
                 <td><button id="order" onclick="toggleContent59()">ORDER</button></td>
             </tr>
         </table>
