--- a/es/b1-intermedio2.html
+++ b/es/b1-intermedio2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en">
+  <html lang="es">
       <head>
           <meta charset="utf-8">
           <title>Rodare</title>
@@ -12,8 +12,8 @@
             <div class="wrapper">
   <div class="translate">
                   <!-- GTranslate: https://gtranslate.io/ -->
-                  <a href="../b1-intermedio2.html" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                  <a href="#" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
+                  <a href="../b1-intermedio2.html" onclick="doGTranslate('es|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
+                  <a href="#" onclick="doGTranslate('es|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
                   <a href="../pl/b1-intermedio2.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
 
                   <style type="text/css">
@@ -33,45 +33,25 @@
                 <h2 class="headline" data-left="2.05%">
                 <a href="index.html">Rodare</a>
                 </h2>
-                  <div class="translate">
-                  <a href="#" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                  <a href="es" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
-                  <a href="#" onclick="doGTranslate('en|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
-                    <style type="text/css">
-
-  a.gflag {vertical-align:middle;font-size:16px;padding:1px 0;background-repeat:no-repeat;background-image:url(//gtranslate.net/flags/16.png);}
-  a.gflag img {border:0;}
-  a.gflag:hover {background-image:url(//gtranslate.net/flags/16a.png);}
-  #goog-gt-tt {display:none !important;}
-  .goog-te-banner-frame {display:none !important;}
-  .goog-te-menu-value:hover {text-decoration:none !important;}
-  body {top:0 !important;}
-  #google_translate_element2 {display:none!important;}
-
-  </style>
-
-
-
-</div>
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
                 <ul class="elmenu">
-                    <li class="elmenu"><a href="index.html">Home</a></li>
+                    <li class="elmenu"><a href="index.html">Inicio</a></li>
                     <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
                     <li class="dropdown elmenu">
-                      <a href="courses.html" class="dropbtn elmenu">Courses</a>
+                      <a href="courses.html" class="dropbtn elmenu">Cursos</a>
                       <div class="dropdown-content elmenu">
-                        <a href="spanish.html" class="elmenu">Spanish</a>
-                        <a href="japanese.html" class="elmenu">Japanese</a>
-                        <a href="english.html" class="elmenu">English</a>
+                        <a href="spanish.html" class="elmenu">Español</a>
+                        <a href="japanese.html" class="elmenu">Japonés</a>
+                        <a href="english.html" class="elmenu">Inglés</a>
                         <a href="piano.html" class="elmenu">Piano</a>
                       </div>
                     </li>
-                    <li class="elmenu"><a href="calendar.html">Calendar</a></li>
-                    <li class="elmenu"><a href="signup.html">Sign-up</a></li>
+                    <li class="elmenu"><a href="calendar.html">Calendario</a></li>
+                    <li class="elmenu"><a href="signup.html">Inscripción</a></li>
                 </ul>
           <article class="img-info">
           <div id="main-content">
-            <p><h1>Sign-up for a course</h1></p>
+            <p><h1>Inscribirse en un curso</h1></p>
             <div class="course-selection" style="display: inline;">
             <select id="input" onchange="courseLevel()">
                       <option>Spanish</option>
