--- a/es/spanish-a1.html
+++ b/es/spanish-a1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="en">
+  <html lang="es">
       <head>
           <meta charset="utf-8">
           <title>Rodare</title>
@@ -11,8 +11,8 @@
             <div class="wrapper">
               <div class="translate">
                               <!-- GTranslate: https://gtranslate.io/ -->
-                              <a href="../spanish-a1.html" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                              <a href="#" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
+                              <a href="../spanish-a1.html" onclick="doGTranslate('es|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
+                              <a href="#" onclick="doGTranslate('es|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
                               <a href="../pl/spanish-a1.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
 
                               <style type="text/css">
@@ -33,23 +33,23 @@
                 <a href="index.html">Rodare</a></h2>
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
                 <ul class="elmenu">
-                    <li class="elmenu"><a href="index.html">Home</a></li>
+                    <li class="elmenu"><a href="index.html">Inicio</a></li>
                     <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
                     <li class="dropdown elmenu">
-                      <a href="courses.html" class="dropbtn elmenu">Courses</a>
+                      <a href="courses.html" class="dropbtn elmenu">Cursos</a>
                       <div class="dropdown-content elmenu">
-                        <a href="spanish.html" class="elmenu">Spanish</a>
-                        <a href="japanese.html" class="elmenu">Japanese</a>
-                        <a href="english.html" class="elmenu">English</a>
+                        <a href="spanish.html" class="elmenu">Español</a>
+                        <a href="japanese.html" class="elmenu">Japonés</a>
+                        <a href="english.html" class="elmenu">Inglés</a>
                         <a href="piano.html" class="elmenu">Piano</a>
                       </div>
                     </li>
-                    <li class="elmenu"><a href="calendar.html">Calendar</a></li>
-                    <li class="elmenu"><a href="signup.html">Sign-up</a></li>
+                    <li class="elmenu"><a href="calendar.html">Calendario</a></li>
+                    <li class="elmenu"><a href="signup.html">Inscripción</a></li>
                 </ul>
                 <article class="img-info">
             <div id="main-content">
-          <p><h1>Spanish</h1></p>
+          <p><h1>Español</h1></p>
 
 
 
@@ -71,13 +71,13 @@
               </ul>
           </div>
 
-          <h2>Level A1</h2>
+          <h2>Nivel A1</h2>
           <p>
-            This is the most basic level of mastery of a language. At this level the speaker is expected to be able to interact easily with others who make an effort to speak slowly and clearly, not in a natural conversational rhythm.
+Se trata del nivel más básico de dominio de una lengua. En este nivel se espera que el hablante pueda interactuar de manera sencilla con otras personas que hagan un esfuerzo por hablar lenta y claramente, no en un ritmo de conversación natural.
 
-           The person is expected to be able to carry out basic conversations such as introducing himself, asking and answering questions about personal data (name, where he lives, hobbies).
+          Se espera de la persona que pueda llevar a cabo conversaciones básicas como presentarse a sí mismo, hacer y responder preguntas sobre datos personales (nombre, donde vive, aficiones).
 
-           The vocabulary is basic, and is limited to concrete nouns and close to the day (domestic animals, parts of the house, food, parts of the body).
+          El vocabulario es básico, y se limita a sustantivos concretos y cercanos al día día (animales domésticos, partes de la casa, comida, partes del cuerpo)
           </p>
           <h2>Mini Tests </h2>
 
