--- a/pl/a2-n52.html
+++ b/pl/a2-n52.html
@@ -37,7 +37,7 @@
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
                 <ul class="elmenu">
                     <li class="elmenu"><a href="index.html">Dom</a></li>
-                    <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
+                    <li class="elmenu"><a href="https://rodare3.blogspot.com/">Blog</a></li>
                     <li class="dropdown elmenu">
                       <a href="courses.html" class="dropbtn elmenu">Przedmioty</a>
                       <div class="dropdown-content elmenu">
@@ -77,9 +77,8 @@
                       </select>
                         </div>
                     <p><h1>Japanese A2(N5) Stacjonarny</h1></p>
-                    <p>Reading: One is able to read and understand typical expressions and sentences written in hiragana, katakana, and basic kanji.<br>
-Listening: One is able to listen and comprehend conversations about topics regularly encountered in daily life and classroom situations, and is able to pick up necessary information from short conversations spoken slowly.
-                      <button onclick="toggleContent92()" style="background-color:blue;color:white;">Czytaj więcej</button>
+<p>Czytanie: Osoba jest w stanie czytać i rozumieć typowe wyrażenia i zdania zapisane w hiraganie, katakanie i podstawowym kanji.<br>
+Słuchanie: Osoba jest w stanie słuchać i rozumieć rozmowy na tematy regularnie spotykane w życiu codziennym i sytuacjach szkolnych oraz jest w stanie wychwycić niezbędne informacje z krótkich rozmów prowadzonych powoli.                      <button onclick="toggleContent92()" style="background-color:blue;color:white;">Czytaj więcej</button>
                       <div id="content92" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
                         <p>
@@ -108,7 +107,7 @@ Listening: One is able to listen and comprehend conversations about topics regul
                   <tr>
                     <td>Trzy opcje 👆 (Wybierz na formularzu, który wyświetli się po kliknięciu „ZAMÓW”👉)</td>
                     <td>02.01.2022 - 02.03.2023</td>
-                    <td><ul id="price"><li>4800zł (2 do 4 osób), or</li><li>3600zł (5 do 8 osób)</li> <li>120zł (1:1)</li></ul></td>
+                    <td><ul id="price"><li>4800zł (2 do 4 osób), lub</li><li>3600zł (5 do 8 osób)</li> <li>120zł (1:1)</li></ul></td>
                       <td><button id="order" onclick="toggleContent91()">ZAMÓW</button></td>
                   </tr>
               </table>
