--- a/pl/b2.html
+++ b/pl/b2.html
@@ -52,7 +52,7 @@
           </div>
           <div class="row">
             <div class="col-12">
-            <h6>Mini Tests</h6>
+            <h6>Minitests</h6>
   <!--aquí va el iframe
             <p><a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
       Minitesty 1
