--- a/pl/c1-avanzado2.html
+++ b/pl/c1-avanzado2.html
@@ -37,7 +37,7 @@
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
                 <ul class="elmenu">
                     <li class="elmenu"><a href="index.html">Dom</a></li>
-                    <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
+                    <li class="elmenu"><a href="https://rodare3.blogspot.com/">Blog</a></li>
                     <li class="dropdown elmenu">
                       <a href="courses.html" class="dropbtn elmenu">Przedmioty</a>
                       <div class="dropdown-content elmenu">
@@ -109,7 +109,7 @@
             <tr>
               <td>Trzy opcje 👆 (Wybierz na formularzu, który wyświetli się po kliknięciu „ZAMÓW”👉)</td>
               <td>02.01.2022 - 14.04.2023</td>
-              <td><ul id="price"><li>4800zł (2 do 4 osób), or</li><li>3600zł (5 do 8 osób)</li> <li>120zł (1:1)</li></ul></td>
+              <td><ul id="price"><li>4800zł (2 do 4 osób), lub</li><li>3600zł (5 do 8 osób)</li> <li>120zł (1:1)</li></ul></td>
                 <td><button id="order" onclick="toggleContent77()">ZAMÓW</button></td>
             </tr>
         </table>
