--- a/pl/spanish-a2.html
+++ b/pl/spanish-a2.html
@@ -37,7 +37,7 @@
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
                 <ul class="elmenu">
                     <li class="elmenu"><a href="index.html">Dom</a></li>
-                    <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
+                    <li class="elmenu"><a href="https://rodare3.blogspot.com/">Blog</a></li>
                     <li class="dropdown elmenu">
                       <a href="courses.html" class="dropbtn elmenu">Przedmioty</a>
                       <div class="dropdown-content elmenu">
@@ -60,9 +60,9 @@
 
           <div class="menu">
               <ul>
-                <li><a href="#" class="active" onclick="toggleContent1()">Levels</a>
+                <li><a href="#" class="active" onclick="toggleContent1()">Poziomy</a>
                   <div id="content1" style="display:none;">
-                      <ul class="menu-Poziomes">
+                      <ul class="menu-levels">
                         <li><a href="spanish-a1.html">A1</a></li>
                         <li><a href="spanish-a2.html">A2</a></li>
                         <li><a href="spanish-b1.html">B1</a></li>
@@ -80,7 +80,7 @@
 
          Od mówcy oczekuje się umiejętności opisywania w teraźniejszości i przeszłości prostych aspektów swojego najbliższego otoczenia (rodzina, zakupy, praca, kierunki) oraz komunikowania w prosty sposób podstawowych, prostych i bezpośrednich wymian informacji. </div>
       </p>
-            <h2>Mini Tests</h2>
+            <h2>Minitests</h2>
       <button onclick="toggleContent42()">Minitesty 1</button>
                  <div id="content42" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc4V5zSrL-5PFowppJCUBUM8HzjcjAALBZ1foAiimlbcQHiGw/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
@@ -93,17 +93,17 @@
                <div id="content51" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfpFVhUuUH6Xak2xcXn4QM8WpLT_HGbdPqrGHB6xSYrZ530kw/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
                </div><br>
-   <button onclick="toggleContent52()">Final Test</button>
+   <button onclick="toggleContent52()">Test końcowy</button>
               <div id="content52" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScT178CMb2ynSmMt85vPByFjBslG9m98Iq9PRLtNr4vD3BuKg/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
               </div>
       <h2>Práctica</h2>
-      <button onclick="toggleContent35()">Professions I</button>
+      <button onclick="toggleContent35()">Zawody I</button>
           <div id="content35" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
               <iframe src="https://learningapps.org/watch?app=13668026" style="border:0px;width:100%;height:700px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
               </div>
 
-      <button onclick="toggleContent36()">Professions II</button>
+      <button onclick="toggleContent36()">Zawody II</button>
           <div id="content36" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
               <iframe src="https://learningapps.org/watch?app=13668109" style="border:0px;width:100%;height:700px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
           </div>
