--- a/pl/a2-basico.html
+++ b/pl/a2-basico.html
@@ -37,7 +37,7 @@
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
                 <ul class="elmenu">
                     <li class="elmenu"><a href="index.html">Dom</a></li>
-                    <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
+                    <li class="elmenu"><a href="https://rodare3.blogspot.com/">Blog</a></li>
                     <li class="dropdown elmenu">
                       <a href="courses.html" class="dropbtn elmenu">Przedmioty</a>
                       <div class="dropdown-content elmenu">
@@ -77,8 +77,8 @@
                       </select>
                         </div>
                     <p><h1>Hiszpański A2(podstawowy) Online</h1></p>
-                    <p>At this level, the grammatical structures and communication skills of the previous level are developed a little more. The speaker is expected to be able to describe in the present and in the past simple aspects of his immediate environment (family, shopping, work, directions) as well as to communicate in a simple way basic, simple and direct exchanges of information.
-                      The course is divided in three modules each consisting of various units covering the A1 contents and allowing you by the end of the course, to be able to express basic ideas and start your journey in the language.
+      Na tym poziomie struktury gramatyczne i umiejętności komunikacyjne z poprzedniego poziomu są nieco bardziej rozwinięte. Od mówcy oczekuje się umiejętności opisywania w teraźniejszości i przeszłości prostych aspektów swojego najbliższego otoczenia (rodzina, zakupy, praca, kierunki) oraz komunikowania w prosty sposób podstawowych, prostych i bezpośrednich wymian informacji.
+                 Kurs jest podzielony na trzy moduły, z których każdy składa się z różnych jednostek obejmujących zawartość A1 i pozwalających pod koniec kursu wyrazić podstawowe pojęcia i rozpocząć swoją przygodę z językiem.                      The course is divided in three modules each consisting of various units covering the A1 contents and allowing you by the end of the course, to be able to express basic ideas and start your journey in the language.
                       <button onclick="toggleContent64()" style="background-color:blue;color:white;">Czytaj więcej</button>
                       <div id="content64" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
@@ -108,7 +108,7 @@
                   <tr>
                     <td>Trzy opcje 👆 (Wybierz na formularzu, który wyświetli się po kliknięciu „ZAMÓW”👉)</td>
                     <td>02.01.2022 - 02.03.2023</td>
-                    <td><ul id="price"><li>4800zł (2 do 4 osób), or</li><li>3600zł (5 do 8 osób)</li> <li>120zł (1:1)</li></ul></td>
+                    <td><ul id="price"><li>4800zł (2 do 4 osób), lub</li><li>3600zł (5 do 8 osób)</li> <li>120zł (1:1)</li></ul></td>
                       <td><button id="order" onclick="toggleContent63()">ZAMÓW</button></td>
                   </tr>
               </table>
