--- a/pl/calendar.html
+++ b/pl/calendar.html
@@ -36,7 +36,7 @@
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
                 <ul class="elmenu">
                     <li class="elmenu"><a href="index.html">Dom</a></li>
-                    <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
+                    <li class="elmenu"><a href="https://rodare3.blogspot.com/">Blog</a></li>
                     <li class="dropdown elmenu">
                       <a href="courses.html" class="dropbtn elmenu">Przedmioty</a>
                       <div class="dropdown-content elmenu">
@@ -51,7 +51,7 @@
                 </ul>
                 <article class="img-info">
             <div id="main-content">
-          <p><h1>Calendar</h1></p>
+          <p><h1>Kalendarz</h1></p>
           <div class="responsive">
             <iframe src="https://calendar.google.com/calendar/embed?src=9e7cf9215b8f9382451a005097a05ab085e0b88ed463133a4ef5c746823a04ae%40group.calendar.google.com&ctz=Europe%2FWarsaw" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
