--- a/pl/courses.html
+++ b/pl/courses.html
@@ -36,7 +36,7 @@
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
                   <ul class="elmenu">
                       <li class="elmenu"><a href="index.html">Dom</a></li>
-                      <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
+                      <li class="elmenu"><a href="https://rodare3.blogspot.com/">Blog</a></li>
                       <li class="dropdown elmenu">
                         <a href="courses.html" class="dropbtn elmenu">Przedmioty</a>
                         <div class="dropdown-content elmenu">
@@ -52,15 +52,14 @@
 
                 <article class="img-info">
             <div id="main-content">
-          <p><h1>Courses</h1></p>
+          <p><h1>Przedmioty</h1></p>
           <div class="responsive">
-            <p>This page is dedicated to provide information and materials for a variety of courses that I teach. In case of any question, just contact me. Regards,<br>Rodrigo</p>
-
+<p>Ta strona zawiera informacje i materiały dotyczące różnych kursów, które prowadzę. W razie jakichkolwiek pytań po prostu skontaktuj się ze mną. Pozdrawiam,<br>Rodrigo</p>
             <ul>
-              <li><a href="spanish.html">Spanish</a></li>
-              <li><a href="japanese.html">Japanese</a></li>
-              <li><a href="english.html">English</a></li>
-              <li><a href="piano.html">Piano</a></li>
+               <li><a href="spanish.html">Hiszpański</a></li>
+               <li><a href="japanese.html">Japoński</a></li>
+               <li><a href="english.html">Angielski</a></li>
+               <li><a href="piano.html">Pianino</a></li>
             </ul>
         </div>
 
