--- a/pl/intermediate2.html
+++ b/pl/intermediate2.html
@@ -37,7 +37,7 @@
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
                 <ul class="elmenu">
                     <li class="elmenu"><a href="index.html">Dom</a></li>
-                    <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
+                    <li class="elmenu"><a href="https://rodare3.blogspot.com/">Blog</a></li>
                     <li class="dropdown elmenu">
                       <a href="courses.html" class="dropbtn elmenu">Przedmioty</a>
                       <div class="dropdown-content elmenu">
@@ -62,8 +62,8 @@
                       <option>wybierz kurs</option>
                     </select>
             		   <select id="output" onchange="levelModality()">
-                     <option>Intermediate</option>
-                     <option>Beginner</option>
+                     <option>Podstawowy</option>
+                     <option>Początkujący</option>
                      <option>wybierz poziom</option>
             		</select>
             			<select id="output2" onchange="courseRedirect()">
@@ -72,7 +72,7 @@
                     <option>wybierz tryb</option>
                 </select>
                   </div>
-              <p><h1>Piano Intermediate Stacjonarny</h1></p>
+              <p><h1>Piano Podstawowy Stacjonarny</h1></p>
               </div>
             </article>
           </div>
