--- a/pl/spanish-a1.html
+++ b/pl/spanish-a1.html
@@ -34,7 +34,7 @@
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
                 <ul class="elmenu">
                     <li class="elmenu"><a href="index.html">Dom</a></li>
-                    <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
+                    <li class="elmenu"><a href="https://rodare3.blogspot.com/">Blog</a></li>
                     <li class="dropdown elmenu">
                       <a href="courses.html" class="dropbtn elmenu">Przedmioty</a>
                       <div class="dropdown-content elmenu">
@@ -57,9 +57,9 @@
 
           <div class="menu">
               <ul>
-                <li><a href="#" class="active" onclick="toggleContent1()">Levels</a>
+                <li><a href="#" class="active" onclick="toggleContent1()">Poziomy</a>
                   <div id="content1" style="display:none;">
-                      <ul class="menu-Poziomes">
+                      <ul class="menu-levels">
                         <li><a href="spanish-a1.html">A1</a></li>
                         <li><a href="spanish-a2.html">A2</a></li>
                         <li><a href="spanish-b1.html">B1</a></li>
@@ -71,32 +71,33 @@
               </ul>
           </div>
 
-          <h2>Level A1</h2>
+          <h2>Poziom A1</h2>
           <p>
-            This is the most basic level of mastery of a language. At this level the speaker is expected to be able to interact easily with others who make an effort to speak slowly and clearly, not in a natural conversational rhythm.
+Jest to najbardziej podstawowy poziom opanowania języka. Na tym poziomie oczekuje się, że mówca będzie w stanie łatwo wchodzić w interakcje z innymi, którzy starają się mówić powoli i wyraźnie, a nie w naturalnym rytmie konwersacji.
 
-           The person is expected to be able to carry out basic conversations such as introducing himself, asking and answering questions about personal data (name, where he lives, hobbies).
+            Oczekuje się, że osoba będzie w stanie prowadzić podstawowe rozmowy, takie jak przedstawianie się, zadawanie pytań i odpowiadanie na pytania dotyczące danych osobowych (imię i nazwisko, miejsce zamieszkania, hobby).
 
-           The vocabulary is basic, and is limited to concrete nouns and close to the day (domestic animals, parts of the house, food, parts of the body).
-          </p>
-          <h2>Mini Tests </h2>
+            Słownictwo jest podstawowe i ogranicza się do rzeczowników konkretnych i zbliżonych do dnia (zwierzęta domowe, części domu, jedzenie, części ciała).
 
-          <button onclick="toggleContent2()">Mini Test 1</button>
+                </p>
+          <h2>Minitesty </h2>
+
+          <button onclick="toggleContent2()">Minitest 1</button>
           <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeN3EaIOW0kJt5KzGwd6dxB0BM9VfEZUxiD_pFEhDIYOVt6nA/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Ładuję…</iframe>
           </div>
 
-          <button onclick="toggleContent7()">Mini Test 2</button>
+          <button onclick="toggleContent7()">Minitest 2</button>
           <div id="content7" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
               <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScfffJNgNchQHoXbSF07L9bT4c10m2u-N9rKBgBeWRRXO-y-A/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
           </div>
 
-          <button onclick="toggleContent8()">Mini Test 3</button>
+          <button onclick="toggleContent8()">Minitest 3</button>
           <div id="content8" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
               <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd-t_f4EjtTyf01l28-xg_JK7AG35rXteutPB5d3CsZS9og-g/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
           </div>
 
-      <button onclick="toggleContent9()">Final Test</button>
+      <button onclick="toggleContent9()">Test końcowy</button>
   <div id="content9" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScHScRBBLWQQ5Hi_GKBaXaopbbFd9-5j40vWw7m4ncB7fxLOQ/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
       </div>
@@ -144,7 +145,7 @@
                     <iframe src="https://www.flippity.net/mg.php?k=1b8ypy-HTWL8skkBLC8MN4x5IFeX0pr_skQmbbYmlap4" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                   </div>
 
-      <button onclick="toggleContent19()">Professions</button>
+      <button onclick="toggleContent19()">Zawody</button>
                   <div id="content19" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                       <iframe id="frame" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" src="https://learningapps.org/watch?app=11454918" frameborder="0" width="100%" height="500" style="overflow:hidden;background:white"></iframe>
                    </div>
