--- a/pl/spanish-b1.html
+++ b/pl/spanish-b1.html
@@ -37,7 +37,7 @@
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
                 <ul class="elmenu">
                     <li class="elmenu"><a href="index.html">Dom</a></li>
-                    <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
+                    <li class="elmenu"><a href="https://rodare3.blogspot.com/">Blog</a></li>
                     <li class="dropdown elmenu">
                       <a href="courses.html" class="dropbtn elmenu">Przedmioty</a>
                       <div class="dropdown-content elmenu">
@@ -62,7 +62,7 @@
               <ul>
                 <li><a href="#" class="active" onclick="toggleContent1()">Poziomy</a>
                   <div id="content1" style="display:none;">
-                      <ul class="menu-Poziomes">
+                      <ul class="menu-levels">
                         <li><a href="spanish-a1.html">A1</a></li>
                         <li><a href="spanish-a2.html">A2</a></li>
                         <li><a href="spanish-b1.html">B1</a></li>
@@ -148,7 +148,7 @@
                   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeb3Bwp4fv_QzsSy9B1Tuij1qnu0QWhD3l4iTxaCVT5QR0C6g/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
       </div>
 
-      <p><button onclick="toggleContent34()">Final Test B1.2</button>
+      <p><button onclick="toggleContent34()">Test końcowy B1.2</button>
               <div id="content34" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf3qWVbEBtC3l0vTqoMBksolw58ihzvJjcY0zWyAV1w45Xv2g/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
 
