--- a/pl/spanish-c2.html
+++ b/pl/spanish-c2.html
@@ -37,7 +37,7 @@
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
                 <ul class="elmenu">
                     <li class="elmenu"><a href="index.html">Dom</a></li>
-                    <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
+                    <li class="elmenu"><a href="https://rodare3.blogspot.com/">Blog</a></li>
                     <li class="dropdown elmenu">
                       <a href="courses.html" class="dropbtn elmenu">Przedmioty</a>
                       <div class="dropdown-content elmenu">
@@ -62,7 +62,7 @@
               <ul>
                 <li><a href="#" class="active" onclick="toggleContent1()">Poziomy</a>
                   <div id="content1" style="display:none;">
-                      <ul class="menu-Poziomes">
+                      <ul class="menu-levels">
                         <li><a href="spanish-a1.html">A1</a></li>
                         <li><a href="spanish-a2.html">A2</a></li>
                         <li><a href="spanish-b1.html">B1</a></li>
@@ -85,7 +85,7 @@
 
           Como os podéis imaginar, alcanzar el último Poziom no es una cuestión de apuntarse a un curso intensivo, sino que es necesario mucho esfuerzo, constancia, estudio, práctica, pasar tiempo en el extranjero inmerso en la lengua objetivo e incluso atender a factores como las capacidades lingüísticas personales, la edad a la que se empieza a aprender un idioma, etc.
 
-          Para los Poziomes anteriores igualmente hace falta mucho trabajo y constancia, pero son más asequibles sin necesidad de vivir mucho tiempo en el extranjero. Leyendo, escuchando música en inglés, asistiendo a clase y utilizando los recursos que nos da Internet es posible alcanzar el Poziom B1 o B2 en un par de años.
+          Para los levels anteriores igualmente hace falta mucho trabajo y constancia, pero son más asequibles sin necesidad de vivir mucho tiempo en el extranjero. Leyendo, escuchando música en inglés, asistiendo a clase y utilizando los recursos que nos da Internet es posible alcanzar el Poziom B1 o B2 en un par de años.
       </p>
          <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
