--- a/pl/spanish.html
+++ b/pl/spanish.html
@@ -37,7 +37,7 @@
                 <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
                 <ul class="elmenu">
                     <li class="elmenu"><a href="index.html">Dom</a></li>
-                    <li class="elmenu"><a href="https://rodare1.blogspot.com/">Blog</a></li>
+                    <li class="elmenu"><a href="https://rodare3.blogspot.com/">Blog</a></li>
                     <li class="dropdown elmenu">
                       <a href="courses.html" class="dropbtn elmenu">Przedmioty</a>
                       <div class="dropdown-content elmenu">
@@ -62,7 +62,7 @@
               <ul>
                 <li><a href="#" class="active" onclick="toggleContent1()">Poziomy</a>
                   <div id="content1" style="display:none;">
-                      <ul class="menu-Poziomes">
+                      <ul class="menu-levels">
                         <li><a href="spanish-a1.html">A1</a></li>
                         <li><a href="spanish-a2.html">A2</a></li>
                         <li><a href="spanish-b1.html">B1</a></li>
