--- a/pl/a1-nyuumon.html
+++ b/pl/a1-nyuumon.html
@@ -76,8 +76,8 @@
                           <option>wybierz tryb</option>
                       </select>
                         </div>
-                    <p><h1>Japanese A1(Nyuumon) Online</h1></p>
-                    <p>The introductory Japanese A1(Nyuumon) is a full introduction to the Japanese culture and language, briefly covering its historical origins, relations with the neighboring cultures and languages, preparing the learner to a fully immersion in the japanese language from scratch. The course also covers the Japanese alphabets: Hiragana and Katakana, for a fast and efficient learning of their reading and writing.
+                    <p><h1>Japoński A1(Nyuumon) Online</h1></p>
+                    <p>The introductory Japoński A1(Nyuumon) is a full introduction to the Japoński culture and language, briefly covering its historical origins, relations with the neighboring cultures and languages, preparing the learner to a fully immersion in the japanese language from scratch. The course also covers the Japoński alphabets: Hiragana and Katakana, for a fast and efficient learning of their reading and writing.
 
                       <button onclick="toggleContent86()" style="background-color:blue;color:white;">Czytaj więcej</button>
                       <div id="content86" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
