--- a/pl/a2-n5.html
+++ b/pl/a2-n5.html
@@ -76,7 +76,7 @@
                           <option>wybierz tryb</option>
                       </select>
                         </div>
-                    <p><h1>Japanese A2(N5) Online</h1></p>
+                    <p><h1>Japoński A2(N5) Online</h1></p>
 <p>Czytanie: Osoba jest w stanie czytać i rozumieć typowe wyrażenia i zdania zapisane w hiraganie, katakanie i podstawowym kanji.<br>
 Słuchanie: Osoba jest w stanie słuchać i rozumieć rozmowy na tematy regularnie spotykane w życiu codziennym i sytuacjach szkolnych oraz jest w stanie wychwycić niezbędne informacje z krótkich rozmów prowadzonych powoli.                      <button onclick="toggleContent90()" style="background-color:blue;color:white;">Czytaj więcej</button>
                       <div id="content90" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
