--- a/pl/b1-n4.html
+++ b/pl/b1-n4.html
@@ -76,7 +76,7 @@
                           <option>wybierz tryb</option>
                       </select>
                         </div>
-                    <p><h1>Japanese B1(N4) Online</h1></p>
+                    <p><h1>Japoński B1(N4) Online</h1></p>
                       <p>Reading: One is able to read and understand passages on familiar daily topics written in basic vocabulary and kanji.
                       <br>Listening: One is able to listen and comprehend conversations encountered in daily life and generally follow their contents, provided that they are spoken slowly.
                       <button onclick="toggleContent94()" style="background-color:blue;color:white;">Czytaj więcej</button>
