--- a/pl/b2-n32.html
+++ b/pl/b2-n32.html
@@ -76,7 +76,7 @@
                     <option>wybierz tryb</option>
                 </select>
                   </div>
-              <p><h1>Japanese B2(N3) Stacjonarny</h1></p>
+              <p><h1>Japoński B2(N3) Stacjonarny</h1></p>
               </div>
             </article>
           </div>
