--- a/pl/c1-n2.html
+++ b/pl/c1-n2.html
@@ -76,7 +76,7 @@
                     <option>wybierz tryb</option>
                 </select>
                   </div>
-              <p><h1>Japanese C1(N2) Online</h1></p>
+              <p><h1>Japoński C1(N2) Online</h1></p>
               </div>
             </article>
           </div>
