--- a/pl/c2-n1.html
+++ b/pl/c2-n1.html
@@ -76,7 +76,7 @@
                     <option>wybierz tryb</option>
                 </select>
                   </div>
-              <p><h1>Japanese C2(N1) Online</h1></p>
+              <p><h1>Japoński C2(N1) Online</h1></p>
               </div>
             </article>
           </div>
