--- a/pl/japanese.html
+++ b/pl/japanese.html
@@ -51,7 +51,7 @@
                 </ul>
                 <article class="img-info">
             <div id="main-content">
-          <p><h1>Japanese</h1></p>
+          <p><h1>Japoński</h1></p>
       <div class="responsive">
 </div>
         </article>
