--- a/spanish-b2.html
+++ b/spanish-b2.html
@@ -60,7 +60,7 @@
 
           <div class="menu">
               <ul>
-                <li><a href="#" class="active" onclick="toggleContent1()">Niveles</a>
+                <li><a href="#" class="active" onclick="toggleContent1()">Levels</a>
                   <div id="content1" style="display:none;">
                       <ul class="menu-niveles">
                         <li><a href="spanish-a1.html">A1</a></li>
@@ -74,13 +74,13 @@
               </ul>
           </div>
 
-          <h2>Nivel B2</h2>
-      <p>Este es el nivel medio-alto del que se habla cuando alguien quiere referirse a su nivel de dominio de un idioma.
+          <h2>Level B2</h2>
+      <p>
+        This is the medium-high level that is spoken of when someone wants to refer to their level of language proficiency.
 
-          Se espera del hablante que sea capaz de entender y producir textos complejos sobre temas concretos y con cierto nivel de abstracción (escribir una carta de solicitud de empleo, hacer una reseña de una película, un espectáculo o un libro, escribir un ensayo sobre un problema, por ejemplo de estilo de vida, alimentación, o medio-ambiente)
+                   The speaker is expected to be able to understand and produce complex texts on specific topics and with a certain level of abstraction (write a job application letter, write a review of a film, show or book, write an essay on a problem , for example lifestyle, diet, or environment)
 
-          Se es capaz de entablar una conversación con hablantes nativos con cierto nivel de fluidez y espontaneidad, con pocos errores que además no dificulten en exceso la comprensión de lo que el hablante está diciendo. Se pueden expresar opiniones y puntos de vista, así como aportar ventajas y desventajas sobre un determinado tema.
-
+                   You are able to engage in a conversation with native speakers with a certain level of fluency and spontaneity, with few errors that also do not make it too difficult to understand what the speaker is saying. You can express opinions and points of view, as well as provide advantages and disadvantages on a certain topic.
       </p>
       </div>
 <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
