--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Cheers,
 Rodrigo Arenas Catalán.</p>
 
                 </article>
-                <img class="img-me" src="images/ogrod.jpeg" alt="ogród">
+                <img class="img-me" src="images/fachada.jpg" alt="ogród">
               </div>
         </body>
   </html>
