--- a/pl/a1-introductory.html
+++ b/pl/a1-introductory.html
@@ -62,12 +62,12 @@
                       <option>wybierz kurs</option>
                     </select>
             		   <select id="output" onchange="levelModality()">
-                     <option>A1(wprowadzający)</option>
-                     <option>A2(podstawowy)</option>
-                     <option>B1(średniozaawansowany)</option>
-                     <option>B2(prawie-zaawansowany)</option>
-                     <option>C1(advanced2)</option>
-                     <option>C2(bardzo zaawansowany)</option>
+                     <option>A1(wprowadzający-ang)</option>
+                     <option>A2(podstawowy-ang)</option>
+                     <option>B1(średniozaawansowany-ang)</option>
+                     <option>B2(prawie-zaawansowany-ang)</option>
+                     <option>C1(advanced2-ang)</option>
+                     <option>C2(bardzo zaawansowany-ang)</option>
                      <option>wybierz poziom</option>
             		</select>
             			<select id="output2" onchange="courseRedirect()">
@@ -76,7 +76,7 @@
                     <option>wybierz tryb</option>
                 </select>
                   </div>
-              <p><h1>Angielski A1(wprowadzający) Online</h1></p>
+              <p><h1>Angielski A1(wprowadzający-ang) Online</h1></p>
               </div>
             </article>
           </div>
