--- a/pl/a2-basic2.html
+++ b/pl/a2-basic2.html
@@ -55,19 +55,19 @@
                   <p><h1>Zapisz się na kurs</h1></p>
                   <div class="course-selection" style="display: inline;">
                   <select id="input" onchange="courseLevel()">
+                            <option>Angielski</option>
                             <option>Hiszpański</option>
                             <option>Japoński</option>
-                            <option>Angielski</option>
                             <option>Pianino</option>
                             <option>wybierz kurs</option>
                           </select>
                   		   <select id="output" onchange="levelModality()">
-                           <option>A2(podstawowy)</option>
-                           <option>B1(średniozaawansowany)</option>
-                           <option>B2(prawie-zaawansowany)</option>
-                           <option>C1(zaawansowany)</option>
-                           <option>C2(bardzo zaawansowany)</option>
-                           <option>A1(wprowadzający)</option>
+                           <option>A2(podstawowy-ang)</option>
+                           <option>B1(średniozaawansowany-ang)</option>
+                           <option>B2(prawie-zaawansowany-ang)</option>
+                           <option>C1(zaawansowany-ang)</option>
+                           <option>C2(bardzo zaawansowany-ang)</option>
+                           <option>A1(wprowadzający-ang)</option>
                            <option>wybierz poziom</option>
                   		</select>
                   			<select id="output2" onchange="courseRedirect()">
@@ -76,9 +76,9 @@
                           <option>wybierz tryb</option>
                       </select>
                         </div>
-                    <p><h1>Hiszpański A2(podstawowy) Online</h1></p>
+                    <p><h1>Angielski A2(podstawowy-ang) Stacjonarny</h1></p>
       Na tym poziomie struktury gramatyczne i umiejętności komunikacyjne z poprzedniego poziomu są nieco bardziej rozwinięte. Od mówcy oczekuje się umiejętności opisywania w teraźniejszości i przeszłości prostych aspektów swojego najbliższego otoczenia (rodzina, zakupy, praca, kierunki) oraz komunikowania w prosty sposób podstawowych, prostych i bezpośrednich wymian informacji.
-                 Kurs jest podzielony na trzy moduły, z których każdy składa się z różnych jednostek obejmujących zawartość A1 i pozwalających pod koniec kursu wyrazić podstawowe pojęcia i rozpocząć swoją przygodę z językiem.                      The course is divided in three modules each consisting of various units covering the A1 contents and allowing you by the end of the course, to be able to express basic ideas and start your journey in the language.
+                 Kurs jest podzielony na trzy moduły, z których każdy składa się z różnych jednostek obejmujących zawartość A1 i pozwalających pod koniec kursu wyrazić podstawowe pojęcia i rozpocząć swoją przygodę z językiem.
                       <button onclick="toggleContent63()" style="background-color:blue;color:white;">Czytaj więcej</button>
                       <div id="content63" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
