--- a/pl/c1-advanced.html
+++ b/pl/c1-advanced.html
@@ -62,12 +62,12 @@
                       <option>wybierz kurs</option>
                     </select>
             		   <select id="output" onchange="levelModality()">
-                     <option>C1(zaawansowany)</option>
-                     <option>C2(bardzo zaawansowany)</option>
-                     <option>A1(wprowadzający)</option>
-                     <option>A2(podstawowy)</option>
-                     <option>B1(średniozaawansowany)</option>
-                     <option>B2(prawie-zaawansowany)</option>
+                     <option>C1(zaawansowany-ang)</option>
+                     <option>C2(bardzo zaawansowany-ang)</option>
+                     <option>A1(wprowadzający-ang)</option>
+                     <option>A2(podstawowy-ang)</option>
+                     <option>B1(średniozaawansowany-ang)</option>
+                     <option>B2(prawie-zaawansowany-ang)</option>
                      <option>wybierz poziom</option>
                </select>
                  <select id="output2" onchange="courseRedirect()">
@@ -76,7 +76,7 @@
                    <option>wybierz tryb</option>
                </select>
                  </div>
-             <p><h1>Angielski C1(zaawansowany) Online</h1></p>
+             <p><h1>Angielski C1(zaawansowany-ang) Online</h1></p>
               </div>
             </article>
           </div>
