--- a/pl/index.html
+++ b/pl/index.html
@@ -59,7 +59,7 @@ Rodrigo Arenas Catalán.
 </p>
 
                 </article>
-                <img class="img-me" src="images/ogrod.jpeg" alt="ogród">
+                <img class="img-me" src="images/fachada.jpg" alt="ogród">
               </div>
         </body>
   </html>
